--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tacos",
   "version": "1.0.0",
-  "description": "Tacos logger App",
+  "description": "Tacos order App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/EmirVelazquez/tacos#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1"
